--- a/main/html/index.html
+++ b/main/html/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ESP32 WiFi Configuration</title>
+    <title>ESP32 Modbus Reader</title>
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
+    <div id="notification-container"></div>
+    <div class="floating-orb orb-1"></div>
+    <div class="floating-orb orb-2"></div>
+    <div class="floating-orb orb-3"></div>
     <div class="container">
         <header>
             <h1>ESP32 WiFi Manager</h1>
@@ -61,7 +65,7 @@
         </main>
         
         <footer>
-            <p>ESP32-C3 WiFi Manager</p>
+            <p>ESP32 Modbus Reader</p>
         </footer>
     </div>
     <script src="/script.js"></script>
