--- a/main/html/modbus.html
+++ b/main/html/modbus.html
@@ -3,66 +3,133 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modbus Device Configuration</title>
+    <title>ESP32 Modbus Reader</title>
     <link rel="stylesheet" href="/style.css">
     <style>
         .device-card {
-            background: white;
-            border-radius: 8px;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-            padding: 20px;
-            margin-bottom: 20px;
+            background: rgba(255, 255, 255, 0.05);
+            border-radius: 20px;
+            padding: 24px;
+            margin-bottom: 24px;
+            border: 1px solid rgba(255, 255, 255, 0.12);
+            backdrop-filter: blur(20px);
+            transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.4);
+            position: relative;
+            overflow: hidden;
+        }
+        .device-card::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(135deg, rgba(0, 71, 171, 0.1) 0%, transparent 50%, rgba(20, 184, 166), 0.1) 100%);
+            opacity: 0;
+            transition: opacity 0.4s ease;
+        }
+        .device-card:hover {
+            transform: translateY(-5px) scale(1.02);
+            background: rgba(255, 255, 255, 0.08);
+            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.5),
+                        0 0 40px rgba(0, 71, 171, 0.2);
+            border-color: rgba(255, 255, 255, 0.2);
+        }
+        .device-card:hover::before {
+            opacity: 1;
         }
         .device-header {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            margin-bottom: 15px;
+            margin-bottom: 18px;
+            position: relative;
+            z-index: 1;
         }
         .device-title {
-            font-size: 1.2em;
-            font-weight: bold;
+            font-size: 1.25em;
+            font-weight: 700;
+            color: rgba(255, 255, 255, 0.98);
+            background: linear-gradient(135deg, #fff 0%, #93C5FD 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
         }
         .status-badge {
-            padding: 4px 12px;
-            border-radius: 12px;
-            font-size: 0.9em;
-            font-weight: bold;
+            padding: 8px 16px;
+            border-radius: 20px;
+            font-size: 0.85em;
+            font-weight: 700;
+            backdrop-filter: blur(20px);
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3),
+                        inset 0 1px 0 rgba(255, 255, 255, 0.2);
         }
-        .status-online { background: #d1fae5; color: #065f46; }
-        .status-offline { background: #fee2e2; color: #991b1b; }
-        .status-error { background: #fef3c7; color: #92400e; }
-        .status-unknown { background: #f3f4f6; color: #374151; }
+        .status-online {
+            background: linear-gradient(135deg, rgba(52, 211, 153, 0.2) 0%, rgba(16, 185, 129, 0.15) 100%);
+            color: #34d399;
+            border: 1px solid rgba(52, 211, 153, 0.4);
+        }
+        .status-offline {
+            background: linear-gradient(135deg, rgba(20, 184, 166, 0.2) 0%, rgba(13, 148, 136, 0.15) 100%);
+            color: #14b8a6;
+            border: 1px solid rgba(20, 184, 166, 0.4);
+        }
+        .status-error {
+            background: linear-gradient(135deg, rgba(20, 184, 166, 0.2) 0%, rgba(13, 148, 136, 0.15) 100%);
+            color: #14b8a6;
+            border: 1px solid rgba(20, 184, 166, 0.4);
+        }
+        .status-unknown {
+            background: rgba(255, 255, 255, 0.1);
+            color: rgba(255, 255, 255, 0.7);
+            border: 1px solid rgba(255, 255, 255, 0.2);
+        }
         .register-table {
             width: 100%;
             border-collapse: collapse;
-            margin-top: 15px;
+            margin-top: 18px;
+            background: rgba(255, 255, 255, 0.03);
+            border-radius: 16px;
+            overflow: hidden;
+            border: 1px solid rgba(255, 255, 255, 0.08);
+            position: relative;
+            z-index: 1;
         }
         .register-table th,
         .register-table td {
-            padding: 10px;
+            padding: 14px;
             text-align: left;
-            border-bottom: 1px solid #e5e7eb;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+            color: rgba(255, 255, 255, 0.9);
         }
         .register-table th {
-            background: #f9fafb;
-            font-weight: bold;
+            background: linear-gradient(135deg, rgba(0, 71, 171, 0.15) 0%, rgba(20, 184, 166), 0.1) 100%);
+            font-weight: 700;
+            color: rgba(255, 255, 255, 0.98);
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
+            font-size: 0.85em;
+        }
+        .register-table tr:hover {
+            background: rgba(0, 71, 171, 0.08);
         }
         .btn-sm {
-            padding: 6px 12px;
+            padding: 10px 18px;
             font-size: 0.9em;
+            font-weight: 700;
         }
         .form-row {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 15px;
-            margin-bottom: 15px;
+            gap: 16px;
+            margin-bottom: 16px;
         }
         .toggle-switch {
             position: relative;
             display: inline-block;
-            width: 50px;
-            height: 24px;
+            width: 52px;
+            height: 28px;
         }
         .toggle-switch input {
             opacity: 0;
@@ -76,57 +143,242 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background-color: #ccc;
-            transition: .4s;
-            border-radius: 24px;
+            background-color: rgba(255, 255, 255, 0.15);
+            transition: .4s cubic-bezier(0.4, 0, 0.2, 1);
+            border-radius: 28px;
+            border: 2px solid rgba(255, 255, 255, 0.2);
+            box-shadow: inset 0 2px 8px rgba(0, 0, 0, 0.3);
         }
         .slider:before {
             position: absolute;
             content: "";
-            height: 18px;
-            width: 18px;
+            height: 22px;
+            width: 22px;
             left: 3px;
-            bottom: 3px;
-            background-color: white;
-            transition: .4s;
+            bottom: 2px;
+            background-color: rgba(255, 255, 255, 0.8);
+            transition: .4s cubic-bezier(0.4, 0, 0.2, 1);
             border-radius: 50%;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
         }
         input:checked + .slider {
-            background-color: #2563eb;
+            background: linear-gradient(135deg, rgba(0, 71, 171, 0.4) 0%, rgba(20, 184, 166), 0.3) 100%);
+            border-color: rgba(0, 71, 171, 0.6);
+            box-shadow: 0 0 20px rgba(0, 71, 171, 0.3);
         }
         input:checked + .slider:before {
-            transform: translateX(26px);
+            transform: translateX(24px);
+            background-color: rgba(255, 255, 255, 0.98);
         }
         .tabs {
             display: flex;
-            border-bottom: 2px solid #e5e7eb;
-            margin-bottom: 20px;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.12);
+            margin-bottom: 24px;
+            background: rgba(255, 255, 255, 0.03);
+            border-radius: 16px;
+            padding: 8px;
+            gap: 8px;
         }
         .tab {
-            padding: 10px 20px;
+            padding: 12px 24px;
             cursor: pointer;
-            border-bottom: 2px solid transparent;
-            margin-bottom: -2px;
+            border-radius: 10px;
+            margin-bottom: 0;
+            color: rgba(255, 255, 255, 0.6);
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            font-size: 0.9em;
+            font-weight: 600;
+            letter-spacing: 0.3px;
+        }
+        .tab:hover {
+            color: rgba(255, 255, 255, 0.9);
+            background: rgba(255, 255, 255, 0.08);
         }
         .tab.active {
-            border-bottom-color: #2563eb;
-            color: #2563eb;
-            font-weight: bold;
+            background: linear-gradient(135deg, rgba(0, 71, 171, 0.2) 0%, rgba(20, 184, 166), 0.15) 100%);
+            color: rgba(255, 255, 255, 0.98);
+            font-weight: 700;
+            box-shadow: 0 4px 15px rgba(0, 71, 171, 0.2);
         }
         .tab-content {
             display: none;
         }
         .tab-content.active {
             display: block;
+            animation: fadeIn 0.4s ease-out;
+        }
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(15px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1000;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.7);
+            backdrop-filter: blur(10px);
+        }
+        .modal-content {
+            background: linear-gradient(135deg, rgba(30, 30, 50, 0.98) 0%, rgba(40, 40, 70, 0.98) 100%);
+            margin: 5% auto;
+            padding: 0;
+            border-radius: 24px;
+            width: 90%;
+            max-width: 500px;
+            border: 1px solid rgba(255, 255, 255, 0.15);
+            backdrop-filter: blur(30px);
+            box-shadow: 0 25px 80px rgba(0, 0, 0, 0.6);
+            animation: modalSlideIn 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+        }
+        @keyframes modalSlideIn {
+            from {
+                opacity: 0;
+                transform: translateY(-40px) scale(0.9);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0) scale(1);
+            }
+        }
+        .modal-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 28px;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.12);
+            background: linear-gradient(135deg, rgba(0, 71, 171, 0.08) 0%, rgba(20, 184, 166), 0.05) 100%);
+            border-radius: 24px 24px 0 0;
+        }
+        .modal-header h3 {
+            color: rgba(255, 255, 255, 0.98);
+            margin: 0;
+            font-weight: 700;
+            background: linear-gradient(135deg, #fff 0%, #93C5FD 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+        }
+        .close {
+            color: rgba(255, 255, 255, 0.5);
+            font-size: 32px;
+            font-weight: 700;
+            cursor: pointer;
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            width: 40px;
+            height: 40px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 50%;
+            background: rgba(255, 255, 255, 0.05);
+        }
+        .close:hover {
+            color: rgba(255, 255, 255, 0.98);
+            background: linear-gradient(135deg, rgba(20, 184, 166), 0.3) 0%, rgba(0, 71, 171, 0.3) 100%);
+            transform: rotate(90deg) scale(1.1);
+            box-shadow: 0 0 20px rgba(20, 184, 166), 0.3);
+        }
+        .modal-content form {
+            padding: 28px;
+        }
+        select {
+            width: 100%;
+            padding: 16px 20px;
+            border: 2px solid rgba(255, 255, 255, 0.15);
+            border-radius: 14px;
+            font-size: 16px;
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            background: rgba(255, 255, 255, 0.05);
+            color: rgba(255, 255, 255, 0.95);
+            cursor: pointer;
+            backdrop-filter: blur(10px);
+            font-weight: 500;
+        }
+        select:focus {
+            outline: none;
+            border-color: rgba(0, 71, 171, 0.6);
+            background: rgba(255, 255, 255, 0.1);
+            box-shadow: 0 0 0 4px rgba(0, 71, 171, 0.15),
+                        0 0 30px rgba(0, 71, 171, 0.2);
+        }
+        select option {
+            background: rgba(30, 30, 50, 0.98);
+            color: rgba(255, 255, 255, 0.95);
+            padding: 12px;
+        }
+        input[type="checkbox"] {
+            width: auto;
+            margin-right: 10px;
+            cursor: pointer;
+            width: 20px;
+            height: 20px;
+            accent-color: #0047AB;
+            transition: all 0.3s ease;
+        }
+        input[type="checkbox"]:hover {
+            transform: scale(1.1);
+        }
+        .modal-header h3 {
+            color: rgba(255, 255, 255, 0.95);
+            margin: 0;
+            font-weight: 600;
+        }
+        .close {
+            color: rgba(255, 255, 255, 0.6);
+            font-size: 28px;
+            font-weight: bold;
+            cursor: pointer;
+            transition: all 0.3s ease;
+        }
+        .close:hover {
+            color: rgba(255, 255, 255, 0.95);
+        }
+        .modal-content form {
+            padding: 24px;
+        }
+        select {
+            width: 100%;
+            padding: 14px 16px;
+            border: 1px solid rgba(255, 255, 255, 0.15);
+            border-radius: 12px;
+            font-size: 16px;
+            transition: all 0.3s ease;
+            background: rgba(255, 255, 255, 0.05);
+            color: rgba(255, 255, 255, 0.95);
+            cursor: pointer;
+            backdrop-filter: blur(10px);
+        }
+        select:focus {
+            outline: none;
+            border-color: rgba(0, 71, 171, 0.5);
+            background: rgba(255, 255, 255, 0.08);
+        }
+        select option {
+            background: rgba(30, 30, 50, 0.98);
+            color: rgba(255, 255, 255, 0.95);
+        }
+        input[type="checkbox"] {
+            width: auto;
+            margin-right: 8px;
+            cursor: pointer;
+            accent-color: #0047AB;
         }
     </style>
 </head>
 <body>
+    <div id="notification-container"></div>
+    <div class="floating-orb orb-1"></div>
+    <div class="floating-orb orb-2"></div>
+    <div class="floating-orb orb-3"></div>
     <div class="container">
         <header>
             <h1>Modbus Device Configuration</h1>
             <nav>
-                <a href="/" class="btn btn-secondary">WiFi Config</a>
+                <a href="/index.html" class="btn btn-secondary">WiFi Config</a>
                 <a href="/dashboard.html" class="btn btn-primary">Dashboard</a>
             </nav>
         </header>
@@ -261,7 +513,7 @@
         </div>
 
         <footer>
-            <p>ESP32-C3 Modbus Manager</p>
+            <p>ESP32 Modbus Reader</p>
         </footer>
     </div>
     <script src="/modbus.js"></script>
