--- a/main/html/modbus.html
+++ b/main/html/modbus.html
@@ -105,6 +105,8 @@
         }
         .register-table {
             width: 100%;
+            min-width: 600px;
+            table-layout: fixed;
             border-collapse: collapse;
             margin-top: 18px;
             background: rgba(255, 255, 255, 0.03);
@@ -114,9 +116,24 @@
             position: relative;
             z-index: 1;
         }
+        .register-table th:nth-child(1),
+        .register-table td:nth-child(1) { width: 60px; }
+        .register-table th:nth-child(2),
+        .register-table td:nth-child(2) { width: 80px; }
+        .register-table th:nth-child(3),
+        .register-table td:nth-child(3) { width: 120px; }
+        .register-table th:nth-child(4),
+        .register-table td:nth-child(4) { width: 140px; }
+        .register-table th:nth-child(5),
+        .register-table td:nth-child(5) { width: 60px; }
+        .register-table th:nth-child(6),
+        .register-table td:nth-child(6) { width: 80px; }
+        .device-card {
+            overflow-x: auto;
+        }
         .register-table th,
         .register-table td {
-            padding: 14px;
+            padding: 8px 6px;
             text-align: left;
             border-bottom: 1px solid rgba(255, 255, 255, 0.1);
             color: rgba(255, 255, 255, 0.9);
@@ -132,10 +149,31 @@
         .register-table tr:hover {
             background: rgba(0, 71, 171, 0.08);
         }
+        .register-table td:last-child {
+            white-space: nowrap;
+        }
+        .write-input {
+            width: 100%;
+            box-sizing: border-box;
+            padding: 4px 6px;
+            border: 2px solid rgba(255, 255, 255, 0.15);
+            border-radius: 8px;
+            background: rgba(255, 255, 255, 0.05);
+            color: rgba(255, 255, 255, 0.95);
+            font-size: 0.85em;
+        }
+        .write-input:focus {
+            outline: none;
+            border-color: rgba(0, 71, 171, 0.6);
+            background: rgba(255, 255, 255, 0.1);
+        }
         .btn-sm {
-            padding: 10px 18px;
-            font-size: 0.9em;
+            padding: 4px 8px;
+            font-size: 0.75em;
             font-weight: 700;
+            white-space: nowrap;
+            width: 100%;
+            box-sizing: border-box;
         }
         .form-row {
             display: grid;
@@ -241,16 +279,30 @@
             backdrop-filter: blur(10px);
         }
         .modal-content {
-            background: linear-gradient(135deg, rgba(30, 30, 50, 0.98) 0%, rgba(40, 40, 70, 0.98) 100%);
-            margin: 5% auto;
+            background: rgba(255, 255, 255, 0.05);
+            border-radius: 20px;
             padding: 0;
-            border-radius: 24px;
+            margin: 5% auto;
             width: 90%;
             max-width: 500px;
-            border: 1px solid rgba(255, 255, 255, 0.15);
-            backdrop-filter: blur(30px);
-            box-shadow: 0 25px 80px rgba(0, 0, 0, 0.6);
+            border: 1px solid rgba(255, 255, 255, 0.12);
+            backdrop-filter: blur(20px);
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.4), inset 0 1px 0 rgba(255, 255, 255, 0.1);
             animation: modalSlideIn 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+            position: relative;
+            overflow: hidden;
+        }
+        .modal-content::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(135deg, rgba(0, 71, 171, 0.1) 0%, transparent 50%, rgba(20, 184, 166, 0.1) 100%);
+            opacity: 0;
+            transition: opacity 0.4s ease;
+            pointer-events: none;
         }
         @keyframes modalSlideIn {
             from {
@@ -266,10 +318,13 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 28px;
+            padding: 24px 28px;
             border-bottom: 1px solid rgba(255, 255, 255, 0.12);
-            background: linear-gradient(135deg, rgba(0, 71, 171, 0.08) 0%, rgba(20, 184, 166), 0.05) 100%);
-            border-radius: 24px 24px 0 0;
+            position: relative;
+            z-index: 1;
+        }
+        #add-register-form {
+            padding: 24px 28px;
         }
         .modal-header h3 {
             color: rgba(255, 255, 255, 0.98);
@@ -396,7 +451,7 @@
         <header>
             <h1>Modbus Device Configuration</h1>
             <nav>
-                <a href="/index.html" class="btn btn-secondary">WiFi Config</a>
+                <a href="/" class="btn btn-secondary">WiFi Config</a>
                 <a href="/dashboard.html" class="btn btn-primary">Dashboard</a>
             </nav>
         </header>
@@ -450,7 +505,6 @@
                     </div>
                     <button type="submit" class="btn btn-primary">Add Device</button>
                 </form>
-                </div>
             </section>
 
             <section class="tabs">
@@ -478,7 +532,7 @@
         <div id="add-register-modal" class="modal" style="display: none;">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h3>Add Register</h3>
+                    <h3 class="section-title">Add Register</h3>
                     <span class="close" onclick="closeModal()">&times;</span>
                 </div>
                 <form id="add-register-form">
@@ -530,7 +584,7 @@
                         <input type="text" id="register-desc" name="description"
                                maxlength="64">
                     </div>
-                    <button type="submit" class="btn btn-primary">Add Register</button>
+                    <button type="submit" class="btn btn-primary" style="margin-top: 8px;">Add Register</button>
                 </form>
             </div>
         </div>
