Add MQTT support with Home Assistant auto-discovery
- Added mqtt_client.c/h with full MQTT client implementation
  - Auto-reconnect with exponential backoff
  - Publish register values on polling and web writes
  - Subscribe to writable register set topics
  - LWT (Last Will and Testament) for online/offline status
  - Home Assistant auto-discovery for sensors, switches, and numbers
- Added MQTT config to nvs_storage.c/h
  - Configurable broker, port, username, password, topic prefix, interval
- Added MQTT API endpoints in web_server.c (/api/mqtt/config GET/POST)
- Created mqtt.html configuration page with status indicator
- Updated modbus_devices.c to publish MQTT on register value changes
- Updated main.c to initialize MQTT on startup
- Added MQTT navigation links to all HTML pages
- Updated CMakeLists.txt with MQTT component dependency

--- a/main/html/dashboard.html
+++ b/main/html/dashboard.html
@@ -204,7 +204,9 @@
             <h1>Modbus Dashboard</h1>
             <nav>
                 <a href="/" class="btn btn-secondary">WiFi Config</a>
-                <a href="/modbus.html" class="btn btn-primary">Device Config</a>
+                <a href="/modbus.html" class="btn btn-secondary">Modbus</a>
+                <a href="/mqtt.html" class="btn btn-secondary">MQTT</a>
+                <a href="/dashboard.html" class="btn btn-primary">Dashboard</a>
             </nav>
         </header>
 
