--- a/main/html/index.html
+++ b/main/html/index.html
@@ -15,8 +15,9 @@
         <header>
             <h1>ESP32 WiFi Manager</h1>
             <nav>
-                <a href="/modbus.html" class="btn btn-primary">Device Config</a>
-                <a href="/dashboard.html" class="btn btn-secondary">Dashboard</a>
+                <a href="/modbus.html" class="btn btn-secondary">Modbus</a>
+                <a href="/mqtt.html" class="btn btn-secondary">MQTT</a>
+                <a href="/dashboard.html" class="btn btn-primary">Dashboard</a>
             </nav>
             <div class="status-indicator" id="status">
                 <span class="status-dot" id="status-dot"></span>
