--- a/main/html/modbus.html
+++ b/main/html/modbus.html
@@ -452,6 +452,7 @@
             <h1>Modbus Device Configuration</h1>
             <nav>
                 <a href="/" class="btn btn-secondary">WiFi Config</a>
+                <a href="/mqtt.html" class="btn btn-secondary">MQTT</a>
                 <a href="/dashboard.html" class="btn btn-primary">Dashboard</a>
             </nav>
         </header>
